// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error-icon prop 1`] = `
<div class="zv-image">
  <div class="zv-image__error"><i class="zv-icon zv-icon-error zv-image__error-icon">
      <!----></i></div>
</div>
`;

exports[`lazy load 1`] = `
<div class="zv-image"><img class="zv-image__img">
  <div class="zv-image__loading"><i class="zv-icon zv-icon-photo-o zv-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`lazy-load error event 1`] = `
<div class="zv-image">
  <div class="zv-image__error"><i class="zv-icon zv-icon-warning-o zv-image__error-icon">
      <!----></i></div>
</div>
`;

exports[`lazy-load load event 1`] = `<div class="zv-image"><img class="zv-image__img"></div>`;

exports[`load event 1`] = `<div class="zv-image"><img src="https://img.yzcdn.cn/vant/cat.jpeg" class="zv-image__img"></div>`;

exports[`load event 2`] = `
<div class="zv-image"><img src="" class="zv-image__img">
  <div class="zv-image__loading"><i class="zv-icon zv-icon-photo-o zv-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`loading-icon prop 1`] = `
<div class="zv-image"><img class="zv-image__img">
  <div class="zv-image__loading"><i class="zv-icon zv-icon-success zv-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`radius prop 1`] = `
<div class="zv-image" style="overflow: hidden; border-radius: 3px;"><img src="https://img.yzcdn.cn/vant/cat.jpeg" class="zv-image__img">
  <div class="zv-image__loading"><i class="zv-icon zv-icon-photo-o zv-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`show-error prop 1`] = `<div class="zv-image"></div>`;

exports[`show-loading prop 1`] = `<div class="zv-image"><img class="zv-image__img"></div>`;
